chore: updated round toSnapshot to use the correct MiserieWinners field